--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,42 @@
-.App {
-  text-align: center;
+/*? Global Stlye for App */
+
+.player-img {
+  transition: transform 0.5s;
+  border-radius: 1rem;
+  max-height: 130px;
+}
+.player-img:hover {
+  transform: scale(1.2);
+  border: 2px solid red;
+  cursor: pointer;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.transferList {
+  margin: auto;
+  width: 80%;
+  max-width: 1200px;
+  min-width: 275px;
+  border-radius: 0.3rem;
+  padding: 1rem;
+  margin-bottom: 1rem;
+  text-align: start;
+  background-image: linear-gradient(135deg, #ffffff 0%, #ffffff 100%);
+  position: relative;
+  box-shadow: 0px 3px 3px rgba(0 0, 0, 0.3);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.consulted {
+  border-left: 1rem solid rgb(189, 141, 18);
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.consulted::after {
+  content: "COMPLETED";
+  background-color: rgb(18, 189, 78);
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  font-size: 2rem;
+  border-radius: 1rem;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  padding: 0.5rem;
+  transform: translate(100%, -50%);
 }
